--- a/ninisani/schedule/stylesheetsch.css
+++ b/ninisani/schedule/stylesheetsch.css
@@ -25,18 +25,37 @@ li{
 }
 
 /* ----------------------------above is the menu--------------------------------------- */
-/* workers
-- categories
--picture
--description
--button
--video
--*/
+div.title{
+  text-align: center;
+  margin: 50px;
+  padding: 100px;
+
+}
 
 
+div.video{
+  text-align: center;
+  margin: 50px;
+  border: 20px solid red;
+  padding: 100px;
+  background-color: #D4D2F3;
+}
 
+div.worker{
 
+}
+div.about{
+  margin: 50px;
+  padding: 100px;
+}
+div.highlight{
+  text-align: center;
+  margin: 50px;
+  border: 20px solid red;
+  padding: 100px;
+  background-color: #D4D2F3;
 
+}
 /* -------------footer------------- */
 div.footer{
 background-color: #0D2F1A;
@@ -51,7 +70,19 @@ div.disclamer{
 }
 /* -----------------Workers---------------------- */
 
-div.gen{
+div.lazulight{
+  margin: 10px;
+  padding: 15px;
+  margin-right: 80%;
+  background-color:#FFFFFF
+}
+div.obsydia{
+  margin: 10px;
+  padding: 15px;
+  margin-right: 80%;
+  background-color:#FFFFFF
+}
+div.ethyria{
   margin: 10px;
   padding: 15px;
   margin-right: 80%;
