--- a/ninisani/about/stylesheet.css
+++ b/ninisani/about/stylesheet.css
@@ -1,3 +1,4 @@
+/* header */
 *{
   padding: 0;
   margin: 0;
@@ -52,86 +53,9 @@ li{
   z-index: 100;
 }
 
-/* ----------------------------above is the menu--------------------------------------- */
 
 
-
-
-
-/* -------------footer------------- */
-div.footer-container{
-  background-color: #004AC1;
-  padding: 4rem 0 4rem 0;
-
-
-}
-div.footer{
-  width: 100%;
-
-  background-color: #004AC1;
-  color: #E3F5DC;
-  display: flex;
-  padding-bottom: 4rem;
-  margin: 0 auto;
-  padding: 0;
-  justify-content: center;
-  flex-wrap: wrap;
-  text-align: center;
-}
-div.footer-text{
-display: flex;
-flex-direction: column;
-margin-right: 5rem;
-  color: #E3F5DC;
-padding-bottom: 2rem;
-
-
-}
-
-.footer-text h2{
-  margin-bottom: 2rem;
-    color: #E3F5DC
-}
-/* -----------------Workers---------------------- */
-
-div.gen{
-  margin: 20px;
-  margin-top: 10px;
-  padding: 15px;
-width: 85px;
-    background-color: #FBA605;
-    border-radius: 5px;
-}
-
-.worker{
-    background-color:#FFFFFF;
-  border: 5px solid orange;
-  border-radius: 25px;
-max-height: 100%;
-width: 300;
-margin: auto;
-
-
-}
-.vtuber{
-  display: inline-block;
-  margin: auto;
-  padding: 1rem;
-  justify-content: center;
-text-align: center;
-  align-items: center;
-  width: 100%;
-}
-
-.ethyria{
-    background-color:#FFFFFF;
-  border: 5px solid orange;
-  border-radius: 25px;
-max-height: 100%;
-width: 300;
-
-}
-
+/* ----------------------page */
 #top-element{
   margin-top: 80px;
 }
@@ -141,16 +65,10 @@ span {
   width: 50px;
 }
 
-button {
-}
-/* --------------------page Elira-------------- */
-h1{
-
-}
 .picture{
   max-height: 100%;
   width: 500;
-/* float: left; */
+
 margin: 15px;
   background-color:#FFFFFF;
 border: 5px solid orange;
@@ -162,12 +80,18 @@ border-radius: 25px;
 align-self: baseline;
 text-align: center;
 }
+.description-container{
+  margin: 15px;
+    background-color:#FFFFFF;
+  border: 5px solid orange;
+  border-radius: 25px;
+}
 
 .name{
   margin: 1rem;
   background-color: #FBA605;
   border-radius: 5px;
-  width: 250px;
+  width: 110px;
   flex-wrap: wrap;
 }
 
@@ -229,4 +153,40 @@ div.video{
   text-align:   right;
   margin: auto;
   margin-bottom: 15px;
+}
+
+
+/*------------------------------- foother */
+div.footer-container{
+  background-color: #004AC1;
+  padding: 4rem 0 4rem 0;
+height: 55%;
+
+}
+div.footer{
+  width: 100%;
+
+  background-color: #004AC1;
+  color: #E3F5DC;
+  display: flex;
+  padding-bottom: 4rem;
+  margin: 0 auto;
+  padding: 0;
+  justify-content: center;
+  flex-wrap: wrap;
+  text-align: center;
+}
+div.footer-text{
+display: flex;
+flex-direction: column;
+margin-right: 5rem;
+  color: #E3F5DC;
+padding-bottom: 2rem;
+
+
+}
+
+.footer-text h2{
+  margin-bottom: 2rem;
+    color: #E3F5DC
 }
