--- a/ninisani/stylesheetfw.css
+++ b/ninisani/stylesheetfw.css
@@ -1,49 +1,89 @@
-body {
-  background-color:  #7E4EAC;
+*{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+font-family: 'Poppins', sans-serif;
+color: #162841;
 }
-
-div {
-
+body {
+  background-color: #FDFFFC;
 }
 
 div.header {
-    background-color: #FFFFFF;
+position: fixed;
+z-index: 99;
+top: 0;
+right: 0;
+width: 100%;
+}
+
+
+div.header a{
+      text-decoration: none;
+  color: #000000;
+    padding: 20px;
+font-size: 1.2rem;
+}
+
+div.header a:hover{
+background-color: rgba(0, 0, 0, 0.3);
 
 }
+
 ul{
   text-align: right;
   list-style-type: none;
   margin: 0px;
-  padding: 20px;
+  padding: 15px;
   overflow: hidden;
-  background-color:#FFFFFF
+  background-color: #FBA605;
 
 }
 
 li{
-  display: inline;
+  display: inline-block;
 }
 
+.logo{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 230px;
+  z-index: 100;
+}
 /* ----------------------------above is the menu--------------------------------------- */
 div.title{
   text-align: center;
   margin: 50px;
   padding: 100px;
+  font-family: 'Permanent Marker', cursive;
 
 }
-
+.welcome{
+  font-family: 'Permanent Marker', cursive;
+  font-size: 64px;
+}
 
 div.video{
   text-align: center;
-  margin: 50px;
-  border: 20px solid red;
-  padding: 100px;
-  background-color: #D4D2F3;
+  margin: auto;
+  padding: 20px;
+
+  background-color: #F71C72;
+   width:  700px;
+
+  border-radius: 40px;
+  display: flex;
+
 }
 
 div.worker{
-
+margin: 1rem;
+background-color: #FBA605;
+border-radius: 5px;
+width: 300px;
 }
+
 div.about{
   margin: 50px;
   padding: 100px;
@@ -56,35 +96,103 @@ div.highlight{
   background-color: #D4D2F3;
 
 }
-/* -------------footer------------- */
-div.footer{
-background-color: #0D2F1A;
-}
-div.credit{
-  margin: 50px;
-  padding: 100px;
-}
-div.disclamer{
-  margin: 50px;
-  padding: 100px;
-}
-/* -----------------Workers---------------------- */
+/*image carouselle */
 
-div.lazulight{
-  margin: 10px;
-  padding: 15px;
-  margin-right: 80%;
-  background-color:#FFFFFF
+
+.slide-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 1000px;
+  margin: auto;
+  position: relative;
+
 }
-div.obsydia{
-  margin: 10px;
-  padding: 15px;
-  margin-right: 80%;
-  background-color:#FFFFFF
+
+.slide-container .slide {
+  display: none;
+  width: 100%;
 }
-div.ethyria{
-  margin: 10px;
-  padding: 15px;
-  margin-right: 80%;
-  background-color:#FFFFFF
+
+.slide-container .slide.fade {
+  animation: fade 0.5s cubic-bezier(0.55, 0.085, 0.68, 0.53) both;
+}
+
+.slide-container .slide img {
+  width: 100%;
+}
+.slide-container .prev,
+.slide-container .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 30px;
+  color: #FBA605;
+  font-weight: bold;
+  font-size: 20px;
+  transition: all 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+.slide-container .prev:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+  color: ;
+  cursor: pointer;
+}
+
+.slide-container .next:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  cursor: pointer;
+}
+
+.slide-container .prev {
+  left: 2px;
+}
+
+.slide-container .next {
+  right: 2px;
+}
+
+.text{
+  font-size: 2rem;
+  text-align: center;
+}
+
+/* -------------footer------------- */
+div.footer-container{
+  background-color: #004AC1;
+  padding: 4rem 0 4rem 0;
+
+
+}
+div.footer{
+  width: 100%;
+
+  background-color: #004AC1;
+  color: #E3F5DC;
+  display: flex;
+  padding-bottom: 4rem;
+  margin: 0 auto;
+  padding: 0;
+  justify-content: center;
+  flex-wrap: wrap;
+  text-align: center;
+}
+div.footer-text{
+display: flex;
+flex-direction: column;
+margin-right: 5rem;
+  color: #E3F5DC;
+padding-bottom: 2rem;
+
+
+}
+
+.footer-text h2{
+  margin-bottom: 2rem;
+    color: #E3F5DC
 }
